; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/mtu3/extr_mtu3_core.c_mtu3_ss_func_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/mtu3/extr_mtu3_core.c_mtu3_ss_func_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtu3 = type { i32, i32 }

@U3D_USB3_CONFIG = common dso_local global i32 0, align 4
@USB3_EN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"USB3_EN = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtu3*, i32)* @mtu3_ss_func_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtu3_ss_func_set(%struct.mtu3* %0, i32 %1) #0 {
  %3 = alloca %struct.mtu3*, align 8
  %4 = alloca i32, align 4
  store %struct.mtu3* %0, %struct.mtu3** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load %struct.mtu3*, %struct.mtu3** %3, align 8
  %9 = getelementptr inbounds %struct.mtu3, %struct.mtu3* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @U3D_USB3_CONFIG, align 4
  %12 = load i32, i32* @USB3_EN, align 4
  %13 = call i32 @mtu3_setbits(i32 %10, i32 %11, i32 %12)
  br label %21

14:                                               ; preds = %2
  %15 = load %struct.mtu3*, %struct.mtu3** %3, align 8
  %16 = getelementptr inbounds %struct.mtu3, %struct.mtu3* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @U3D_USB3_CONFIG, align 4
  %19 = load i32, i32* @USB3_EN, align 4
  %20 = call i32 @mtu3_clrbits(i32 %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %14, %7
  %22 = load %struct.mtu3*, %struct.mtu3** %3, align 8
  %23 = getelementptr inbounds %struct.mtu3, %struct.mtu3* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %4, align 4
  %26 = icmp ne i32 %25, 0
  %27 = xor i1 %26, true
  %28 = xor i1 %27, true
  %29 = zext i1 %28 to i32
  %30 = call i32 @dev_dbg(i32 %24, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %29)
  ret void
}

declare dso_local i32 @mtu3_setbits(i32, i32, i32) #1

declare dso_local i32 @mtu3_clrbits(i32, i32, i32) #1

declare dso_local i32 @dev_dbg(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
